# lectorium

./: Makefile.am  configure.in
lectorium/: Makefile.am  lectorium.cpp  temporal_id_generator.cpp  temporal_id_generator.h
web/: Lectorium.as  Lectorium.swf  Makefile.am  TODO  common.tpl  lector.tpl
