AC_INIT([Moment-Lectorium], [0.1])

PKG_CHECK_MODULES(THIS, [libmoment-1.0 >= 0.1])
AC_SUBST(THIS_CFLAGS)
AC_SUBST(THIS_LIBS)

AM_INIT_AUTOMAKE([1.7 gnu nostdinc])

AC_PROG_CC
AC_PROG_CXX
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

case "$host" in
  *-*-cygwin*)
    platform_cygwin=yes
    ;;
  *-*-mingw*)
    platform_win32=yes
    ;;
  *)
    platform_default=yes
    ;;
esac

AM_CONDITIONAL(LIBMARY_PLATFORM_CYGWIN,  test x$platform_cygwin  = xyes)
if test "x$platform_cygwin" = "xyes"; then
    AC_DEFINE([LIBMARY_PLATFORM_CYGWIN],  [1], [ ])
fi

AM_CONDITIONAL(LIBMARY_PLATFORM_WIN32,   test x$platform_win32   = xyes)
if test "x$platform_win32" = "xyes"; then
    AC_DEFINE([LIBMARY_PLATFORM_WIN32],   [1], [ ])
fi

AM_CONDITIONAL(LIBMARY_PLATFORM_DEFAULT, test x$platform_default = xyes)
if test "x$platform_default" = "xyes"; then
    AC_DEFINE([LIBMARY_PLATFORM_DEFAULT], [1], [ ])
fi


tmp_cxxflags="$CXXFLAGS"

CXXFLAGS="$CXXFLAGS -Wextra"
AC_MSG_CHECKING([whether CXX supports -Wextra])
AC_COMPILE_IFELSE(
    [AC_LANG_PROGRAM([])],
    [AC_MSG_RESULT([yes])]
        [AM_CFLAGS="$AM_CFLAGS -Wextra"]
        [AM_CXXFLAGS="$AM_CXXFLAGS -Wextra"],
    [AC_MSG_RESULT([no])]
        [AM_CFLAGS="$AM_CFLAGS"]
        [AM_CXXFLAGS="$AM_CXXFLAGS"])

CXXFLAGS="$tmp_cxxflags -std=gnu++11"
AC_MSG_CHECKING([whether CXX supports -std=gnu++11])
AC_COMPILE_IFELSE(
    [AC_LANG_PROGRAM([])],
    [AC_MSG_RESULT([yes])]
        [AM_CXXFLAGS="$AM_CXXFLAGS -std=gnu++11"],
    [AC_MSG_RESULT([no])]
        AC_MSG_CHECKING([whether CXX supports -std=c++11])
        CXXFLAGS="$tmp_cxxflags -std=c++11"
        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
                          [AC_MSG_RESULT([yes])]
                              [AM_CXXFLAGS="$AM_CFLAGS -std=c++11"],
                          [AC_MSG_RESULT([no])]
                              [AM_CXXFLAGS="$AM_CFLAGS -std=gnu++0x"]))

CXXFLAGS="$tmp_cxxflags"
AC_SUBST([AM_CFLAGS])
AC_SUBST([AM_CXXFLAGS])


AC_CONFIG_FILES([Makefile
		 web/Makefile
                 web_star/Makefile
		 lectorium/Makefile])
AC_OUTPUT

